--- a/Example/ZHTableViewGroup.xcodeproj/xcshareddata/xcschemes/ZHTableViewGroup iOS.xcscheme
+++ b/Example/ZHTableViewGroup.xcodeproj/xcshareddata/xcschemes/ZHTableViewGroup iOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0720"
+   LastUpgradeVersion = "0910"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6003F589195388D20070C39A"
-               BuildableName = "ZHTableViewGroup_Example.app"
-               BlueprintName = "ZHTableViewGroup_Example"
+               BlueprintIdentifier = "5DC98EAD208589C9009AE998"
+               BuildableName = "ZHTableViewGroup_iOS.framework"
+               BlueprintName = "ZHTableViewGroup iOS"
                ReferencedContainer = "container:ZHTableViewGroup.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,39 +26,10 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      language = ""
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5D5C593F1EC468A800CA883D"
-               BuildableName = "ZHTableViewGroup_ExampleTests.xctest"
-               BlueprintName = "ZHTableViewGroup_ExampleTests"
-               ReferencedContainer = "container:ZHTableViewGroup.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5D5C594D1EC468B400CA883D"
-               BuildableName = "ZHTableViewGroup_ExampleUITests.xctest"
-               BlueprintName = "ZHTableViewGroup_ExampleUITests"
-               ReferencedContainer = "container:ZHTableViewGroup.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "ZHTableViewGroup_Example.app"
-            BlueprintName = "ZHTableViewGroup_Example"
-            ReferencedContainer = "container:ZHTableViewGroup.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -66,22 +37,22 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "ZHTableViewGroup_Example.app"
-            BlueprintName = "ZHTableViewGroup_Example"
+            BlueprintIdentifier = "5DC98EAD208589C9009AE998"
+            BuildableName = "ZHTableViewGroup_iOS.framework"
+            BlueprintName = "ZHTableViewGroup iOS"
             ReferencedContainer = "container:ZHTableViewGroup.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -91,16 +62,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "ZHTableViewGroup_Example.app"
-            BlueprintName = "ZHTableViewGroup_Example"
+            BlueprintIdentifier = "5DC98EAD208589C9009AE998"
+            BuildableName = "ZHTableViewGroup_iOS.framework"
+            BlueprintName = "ZHTableViewGroup iOS"
             ReferencedContainer = "container:ZHTableViewGroup.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
